--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,20 +29,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/resultTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
-        android:gravity="end"
-        android:textSize="20sp"
-        android:textColor="#aaaaaa"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="0dp"
+        android:gravity="end"
         android:text="1111"
-        android:layout_height="wrap_content"/>
+        android:textColor="#aaaaaa"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TableLayout
         android:id="@+id/keypadTableLayout"
@@ -84,6 +85,7 @@
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMod"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -91,11 +93,11 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="%"
-                android:id="@+id/buttonMod"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonDivide"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -103,7 +105,6 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="/"
-                android:id="@+id/buttonDivide"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
 
@@ -113,6 +114,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button7"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -120,10 +122,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="7"
-                android:id="@+id/button7"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -131,10 +133,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="8"
-                android:id="@+id/button8"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -142,10 +144,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="9"
-                android:id="@+id/button9"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMulti"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -153,7 +155,6 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="X"
-                android:id="@+id/buttonMulti"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
         </TableRow>
@@ -161,6 +162,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -168,10 +170,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="4"
-                android:id="@+id/button4"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -179,10 +181,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="5"
-                android:id="@+id/button5"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button6"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -190,10 +192,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="6"
-                android:id="@+id/button6"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMinus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -201,7 +203,6 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="-"
-                android:id="@+id/buttonMinus"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
         </TableRow>
@@ -209,6 +210,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -216,10 +218,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="1"
-                android:id="@+id/button1"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -227,10 +229,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="2"
-                android:id="@+id/button2"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -238,10 +240,10 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="3"
-                android:id="@+id/button3"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonPlus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -249,7 +251,6 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="+"
-                android:id="@+id/buttonPlus"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
         </TableRow>
@@ -267,6 +268,7 @@
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -274,7 +276,6 @@
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="0"
-                android:id="@+id/button0"
                 android:textSize="24sp" />
 
             <androidx.appcompat.widget.AppCompatButton
@@ -299,4 +300,61 @@
                 android:textSize="24sp" />
         </TableRow>
     </TableLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/historyLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/keypadTableLayout"
+        tools:visibility="visible">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/closeButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:onClick="historyButtonClicked"
+            android:stateListAnimator="@null"
+            android:text="닫기"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/closeButton">
+
+            <LinearLayout
+                android:id="@+id/historyLinearLayout"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"/>
+        </ScrollView>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/historyClearButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="47dp"
+            android:layout_marginEnd="47dp"
+            android:layout_marginBottom="38dp"
+            android:background="@drawable/button_background_green"
+            android:onClick="historyClearButtonClicked"
+            android:text="계산기록 삭제"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
