--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="15dp"
         android:gravity="end"
-        android:text="111"
         android:textSize="30sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,6 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:gravity="end"
-        android:text="1111"
         android:textColor="#aaaaaa"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
@@ -318,7 +317,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:onClick="historyButtonClicked"
+            android:onClick="closeHistoryButtonClicked"
             android:stateListAnimator="@null"
             android:text="닫기"
             android:textColor="@color/black"
@@ -332,6 +331,7 @@
             android:layout_margin="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/historyClearButton"
             app:layout_constraintTop_toBottomOf="@id/closeButton">
 
             <LinearLayout
